src/assets/scss/_teachers.scss
// @import './variables.scss';
.teachersList {
  .teachers {
    height: 64vh;
    overflow-y: scroll;
    overflow-x: hidden;
    // display: flex;
    // align-items: center;
    ul {
      width: 95%;
      li {
        list-style: none;
        padding: 10px;
        margin: 5px;
        width: 100%;
        // box-shadow: 0 5px 25px rgba(#000, $alpha: 0.1);
        // start ===============
        // transition: transform 0.2s;

        // border-radius: 10px;
        background-color: white;
        // font-size: 1.2rem;
        // color: black;
        // &:hover {
        //   border-radius: 10px;
        //   transform: scale(1.1);
        //   z-index: 100;
        //   background: var(--color-c1-blue);
        //   color: white;
        //   box-shadow: 0 5px 25px rgba(#000, $alpha: 0.1);
        // }
        // end ==================

        transition: transform 0.2s;
        @media (max-width: 768px) {
          background-color: var(--color-black);
        }
        font-size: 1.2rem;
        color: var(--color-black);
        border-radius: 10px;
        &:hover {
          transform: scale(1.05);
          z-index: 100;
          background: var(--color-c1-blue);
          color: white;
          box-shadow: 0 5px 25px rgba(#000, $alpha: 0.1);
        }
        color: black;
      }
    }
  }
  .alpha-letters-list {
    // display: none;
    // height: 60%;

    .contains {
      margin: 0px;
    }
    color: black;
    // position: absolute;
    // position: -webkit-sticky;
    // top: 0px;
    // right: 20px;
  }
}
.fakeButton {
  border-radius: 50px;
  background-color: var(--color-white);
  font-weight: bolder;
  font-size: 1rem;
  color: black;
  padding: 5px 15px;
  text-transform: uppercase;
  &:hover {
    background-color: var(--color-c1-blue);
    color: var(--color-white);
  }
}

